--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
+.loginWindow {
+  margin: auto;
+  border: 1px solid black;
+  border-radius: 25px;
+  width: 200px;
+  height: 125px;
+  padding: 20px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -62.5px;
+  margin-left: -100px;
+}
 
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+}
