--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@
   left: 50%;
   margin-top: -62.5px;
   margin-left: -100px;
+  z-index: 999;
 }
 
 .overlay {
+  background-color:rgba(0, 0, 0, 0.5);
   position: fixed;
   height: 100%;
   width: 100%;
   top: 0;
-  z-index: 999;
+  z-index: 998;
 }
 
 .board {
@@ -59,4 +61,31 @@
 
 .pasteInput:focus {
   outline-width: 0;
+}
+
+.settings {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  padding-right: 5px;
+  padding-top: 15px;
+  z-index: 999;
+}
+
+.settingsPanel {
+  background-color: #b2b2b2;
+  width: 150px;
+  height: 100%;
+}
+
+.settingsOptions {
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: none;
+}
+
+.settingsLink {
+  cursor: pointer;
 }
